# CIDEPINT-PS-2023

./: README.md
admin/: app.py  pyproject.toml
admin/src/models/: institution_service.py  keyword.py  requirement.py  requirement_state.py  role.py  role_permission.py  service_keyword.py  state.py  user.py  user_institution.py
admin/src/models/seeds/: users_seed.py
admin/src/web/: config.py
admin/src/web/api/: auth.py  services.py
admin/src/web/controllers/: configs_module.py  institutions_module.py  logout.py  maintenance.py  register.py  service_detail.py  services.py  users_module.py  users_of_institution.py
admin/src/web/helpers/: auth.py  users_validations.py
admin/src/web/schemas/: institution.py
admin/src/web/templates/: config_edit.html  config_view.html  error.html  institution_show.html  institutions_index.html  layout.html  service_create_form.html  service_detail.html  user_index.html  user_profile.html  user_update_form.html
admin/static/: service_validations.js  validations.js
grupo18/: calculator.py
grupo18/admin/static/: error.css  layout.css  service.css  service_detail.css  service_view.css  styleLogReg.css
grupo18/operations/: division.py
grupo18/portal/: index.html  package.json
grupo18/portal/src/: App.vue  api.js
portal/: .env.development  .env.production  package-lock.json
portal/src/: main.js
portal/src/assets/: main.css
portal/src/components/: AboutItem.vue  CakeGraph.vue  Contact.vue  NoteForm.vue  Notes.vue  Ranking.vue  RequestForm.vue  Requests.vue  Services.vue  Top10.vue  servicedetail.vue
(+64 files in other folders)
